--- a/pom.xml
+++ b/pom.xml
@@ -205,30 +205,30 @@
     </build>
 
     <distributionManagement>
-       <!-- <repository>
+        <repository>
             <id>nexus-releases</id>
             <name>Nexus Release Repository</name>
-            <url>http://192.168.75.130:8081/repository/maven-releases/</url>
+            <url>http://192.168.211.134:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>nexus-snapshots</id>
             <name>Nexus Snapshot Repository</name>
             <url>http://192.168.75.130:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>-->
+        </snapshotRepository>
     </distributionManagement>
 
     <repositories>
-        <!--<repository>
+        <repository>
             <id>nexus</id>
             <name>Nexus Repository</name>
-            <url>http://192.168.75.130:8081/repository/maven-public/</url>
+            <url>http://192.168.211.134:8081/repository/maven-public/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
             <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository>-->
+        </repository>
 
         <repository>
             <id>aliyun-repos</id>
@@ -284,17 +284,17 @@
     </repositories>
 
     <pluginRepositories>
-       <!-- <pluginRepository>
+        <pluginRepository>
             <id>nexus</id>
             <name>Nexus Plugin Repository</name>
-            <url>http://192.168.75.130:8081/repository/maven-public/</url>
+            <url>http://192.168.211.134:8081/repository/maven-public/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
             <releases>
                 <enabled>true</enabled>
             </releases>
-        </pluginRepository>-->
+        </pluginRepository>
 
         <pluginRepository>
             <id>aliyun-repos</id>
